XXXX-XX-XX mxtune-1.12.2-1.0.0-rc.X

----
2020-12-03 mxtune-1.12.2-1.0.0-rc.3
Fixes:
 * Fix a major issue where invalid MML can cause an infinite loop causing the client to freeze.

----
2020-12-01 mxtune-1.12.2-1.0.0-rc.2
Changes:
 * Added a ful-bright emissive light effect to the Band Amp when it plays music.

Fixes:
 * (Oops :P) I fixed the MML paste from clipboard button that I broke when I was replacing the MML parser. Sorry everyone.

----
2020-11-14 mxtune-1.12.2-1.0.0-rc.1
Changes:
 * Removed the ANTLR based MML Parser. The new parser does not generate errors for badly written MML.
   Because of this all of the parse error related text boxes have been removed from the MXT GUI. This
   reduces the size of the final jar by about 1MB since the ANTLR runtime jar is no longer used.
 * MML: Enable the Maple Story 2 sustain command. 's1' to turn and or 's0' to turn off.
 * Timpani of Doom: jump particle effect is now white in snowy biomes else brown.
Fixes:
 * Web links in the MXT GUI work again.

----
2020-10-25 mxtune-1.12.2-0.8.0-beta.10
NOTE: Backup your WORLDS before updating to this version. Instruments have changed.
 * This means you will need to open the inventory on your hand-held instruments and select the timbre.
Changes:
 * Band Amp - Change Sneak-RIGHT-Click behavior depending on lock state. Update hoover helps.
 * All hand-held instruments are now ALL-IN-ONE Multi-Instruments.
 * Added "Gold Bone" and "Timpanic Membrane" ingredients and updated recipes and advancements
 * Added "Golden Skeleton" and "Timpani of Doom" mobs that can drop the above ingredients and sometimes sheet music.
 * The rare ingredients are also available from the musician villager.
 * Advancements and Recipes have been changed, but I'm not finished. Expect more changes.
 * Importing MML Improvements
   * 3MLE .mml files: Improved program/instrument mapping to mxTune instruments.