@@ -6,9 +6,9 @@ forgeMappings=stable_39
 jeiVersion=4.15.0.268
 modVersionMajor=1
 modVersionMinor=0
-modVersionRev=0
-versionType=rc
-typeVersion=4
+modVersionRev=1
+# versionType=rc
+# typeVersion=4
 # versionType=SNAPSHOT
 # typeVersion=36
 projectBranch=1.12
